<resources>
    <string name="title_activity_payment">PaymentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment">Payment</string>
    <string name="waya_pay_text">Wayapay</string>
    <string name="account_number">Account Number</string>
    <string name="mike_smith">Mike Smith</string>
    <string name="select_string">Select month</string>
    <string name="card_number_sample">000000000000</string>
    <string name="go_ahead">Go ahead</string>
    <string name="notice">Notice</string>
    <string name="manage_card">Manage Card</string>
    <string name="card_details">Card Details</string>
    <string name="empty_card_description">Your card section looks empty</string>
    <string name="empty_account_description">Your bank account section looks empty</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="default_wallet_text">Default Wallet</string>
    <string name="payment_settings">Payment Settings</string>
    <string name="manage_bank_account">Manage Bank Account</string>
    <string name="dispute_log">Dispute Log</string>
    <string name="card_holder_text">Card holder</string>
    <string name="expiry_date_string">Expiry date</string>
    <string name="issuer_bank_text">Issuer bank</string>
    <string name="delete_card_text">Delete Card</string>
    <string name="select_bank_text">Select Bank</string>
    <string name="account_number_hint">Account number</string>
    <string name="add_bvn_text">Add BVN</string>
    <string name="expiry_date_concat">%s/%s</string>
    <string name="last_four_digits_stars">****  %s</string>
    <string name="card_pin">card pin</string>
    <string name="error_title">An Error occurred</string>
    <string name="try_again">Try again</string>
    <string name="select_wallet">Select Wallet</string>
    <string name="generate_q_r_code">Generate QR Code</string>
    <string name="error_select_wallet">Select a Wallet</string>
    <string name="error_enter_amount">Enter an Amount</string>
    <string name="error_enter_description">Enter a Description</string>
    <string name="default_error_message">An Error occurred. Please try again.</string>
    <string name="error_invalid_pin">Enter a valid Pin</string>
    <string name="placeholder_amount_being_sent_to">N%s is being sent to</string>
    <string name="verify_account_number">Verify Account Number</string>
    <string name="enter_account_number">Enter your Account Number</string>
    <string name="error_select_bank">Select your Bank</string>
    <string name="bank_account_added">Bank Account added</string>
    <string name="submit_btn_text">Submit</string>
    <string name="last_four_digits_stars_bank_account">****%s</string>
    <string name="delete_bank_account">Delete Bank Account</string>
    <string name="bank_account_name">Bank Account Name</string>
    <string name="bank_account_deleted">Bank Account deleted</string>
    <string name="amount_hint">N 0.00</string>
    <string name="my_wallets">My wallets</string>
    <string name="create_wallet_verification_message">Are you sure you want to create another wallet account?</string>
    <string name="continue_">Continue</string>
    <string name="create_wallet">Create wallet</string>
    <string name="input_your_4_digit_pin">Input your 4 digit pin</string>
    <string name="please_input_your_4_digit_pin_to_create_a_new_wallet">Please input your 4 digit pin to create a new wallet</string>
    <string name="wallet_created_successfully">Wallet created successfully</string>
    <string name="error_verifying_pin">Error verifying pin</string>
    <string name="invalid_pin">Invalid pin</string>
    <string name="invitation_code">Invitation code</string>
    <string name="acc_">Acc:</string>
    <string name="invite_code_">Invite Code:</string>
    <string name="available_balance">Available Balance</string>
    <string name="wallet_history">Wallet History</string>
    <string name="transfer_funds">Transfer Funds</string>
    <string name="pay_to_email">Pay to Email</string>
    <string name="pay_to_waya_id">Pay to Waya ID</string>
    <string name="scan_to_pay">Scan to Pay</string>
    <string name="pay_to_phone">Pay to Phone</string>
    <string name="send_to_beneficiaries">Send to Beneficiaries</string>
    <string name="your_bank_account_section_looks_empty">Your bank account section looks empty</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_account_added_successfully">Bank account added successfully</string>
    <string name="set_as_default_wallet">Set as default wallet</string>
    <string name="make_default_wallet">Make default wallet</string>
    <string name="wallet_set_as_default_wallet">Wallet set as default wallet</string>
    <string name="select_a_bank">Select a bank</string>
    <string name="your_card_has_been_added_successfully">Your card has been added successfully</string>
    <string name="choose_wallet">Chose wallet</string>
    <string name="select_month">Select month</string>
    <string name="delete_account">Delete account</string>
    <string name="are_you_sure_you_want_to_delete_this_account">Are you sure you want to delete this account?</string>
    <string name="bvn_linked_successfully">BVN Linked Successfully</string>
    <string name="top_up_via_card">Top up via card</string>
</resources>
