<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:padding="16dp"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/primary_text_color"
            android:text="@string/transfer_funds"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pay_to_email_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_circle_bg"
                android:padding="12dp"
                android:src="@drawable/pay_to_email_ui"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/pay_to_email"
                android:textColor="@color/primary_text_color"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pay_waya_id_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imageView_moment"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_circle_bg"
                android:padding="12dp"
                android:src="@drawable/pay_to_waya_id_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_moment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/pay_to_waya_id"
                android:textColor="@color/primary_text_color"
                app:layout_constraintStart_toEndOf="@+id/imageView_moment"
                app:layout_constraintTop_toTopOf="@+id/imageView_moment" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scan_to_pay_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imageViewPages"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_circle_bg"
                android:padding="12dp"
                android:src="@drawable/qr_code_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/scan_to_pay"
                android:textColor="@color/primary_text_color"
                app:layout_constraintStart_toEndOf="@+id/imageViewPages"
                app:layout_constraintTop_toTopOf="@+id/imageViewPages" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pay_to_phone_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imageViewGroup"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_circle_accent_background"
                android:padding="12dp"
                android:src="@drawable/pay_to_phone_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/pay_to_phone"
                android:textColor="@color/primary_text_color"
                app:layout_constraintStart_toEndOf="@+id/imageViewGroup"
                app:layout_constraintTop_toTopOf="@+id/imageViewGroup" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/send_to_benefi_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imageViewEvent"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_circle_accent_background"
                android:padding="12dp"
                android:src="@drawable/beneficiaries_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/send_to_beneficiaries"
                android:textColor="@color/primary_text_color"
                app:layout_constraintStart_toEndOf="@+id/imageViewEvent"
                app:layout_constraintTop_toTopOf="@+id/imageViewEvent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>