<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.managebank.AddBankAccount">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/custom_flat_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:leftImage="@{@drawable/ic_left_arrow}"
            app:toolBarTitle="@{@string/add_bank_account}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/select_bank_dropdown"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:textColorHint="@color/faint_text_color"
            app:layout_constraintEnd_toEndOf="@+id/rightGuide"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <AutoCompleteTextView
                android:id="@+id/select_bank_ACTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_bank_text"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_number_textInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15"
            android:hint="@string/account_number_hint"
            android:textColorHint="@color/faint_text_color"
            app:layout_constraintEnd_toEndOf="@+id/rightGuide"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toBottomOf="@+id/select_bank_dropdown">​

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10" />
            ​
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_name_textInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15"
            android:hint="@string/account_name"
            android:textColorHint="@color/faint_text_color"
            app:layout_constraintEnd_toEndOf="@+id/rightGuide"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toBottomOf="@+id/account_number_textInput">​

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
            ​
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_Btn"
            style="@style/WayaMaterialButton.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40"
            android:text="@string/verify_account_number"
            app:layout_constraintEnd_toEndOf="@+id/rightGuide"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toBottomOf="@+id/account_name_textInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
